# cavorite

./: .bazelrc  .gitignore  .golangci.yaml  BUILD  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  add-bazel-dep.sh  bazel-bin  bazel-out  bazel-pantri_but_go  bazel-testlogs  deps.bzl  go.mod  go.sum  main.go  main_test.go  renovate.json  repositories.bzl
.github/: README.md
.github/workflows/: action.yaml  ci.yaml  code-coverage.yaml  golangci-lint.yaml  integration-test.yaml  lint_and_test.yaml  linter.yaml  main.yaml  tests.yaml  unit-tests.yaml
.github/workflows/actions/bazel_build/: action.yaml
.github/workflows/actions/ensure_compile_and_run/: action.yaml
.github/workflows/actions/generic/: action.yaml
.github/workflows/actions/integration_tests/: action.yaml
.github/workflows/actions/lint/: action.yaml
_ci/bazel_build/: Dockerfile
_ci/compile_and_run/: Dockerfile
_ci/integration_tests/: Dockerfile  run_minio_test.sh
_ci/integration_tests/scripts/: createBucket.go
_ci/lint/: Dockerfile
bindetector/: BUILD.bazel  bindetector.go  bindetector_unix.go  bindetector_windows.go
config/: BUILD.bazel  config.go  config_test.go  load.go  load_test.go  pantri.go
config/loader/: loader.go
env/: env.go
exec/: BUILD.bazel  exec.go  exec_test.go
exec/test/artifacts/: long_running.sh
fileutils/: BUILD.bazel  fileutils.go
internal/bindetector/: BUILD.bazel  bindector.go  bindector_windows.go  bindetector_darwin.go  bindetector_unix_test.go
internal/cli/: BUILD.bazel  helpers.go  helpers_test.go  init.go  init_test.go  loader.go  loader_test.go  retrieve.go  retrieve_test.go  root.go  root_test.go  upload.go  upload_test.go
internal/cmd/pantri/: BUILD.bazel  helpers.go  init.go  pantri.go  retrieve.go  upload.go
internal/cmd/root/: BUILD.bazel  helpers.go  init.go  retrieve.go  root.go  upload.go
internal/config/: BUILD.bazel  config.go  config_test.go  load.go  load_test.go
internal/exec/: BUILD.bazel  exec.go
internal/fileutils/: BUILD.bazel  fileutils.go  fileutils_test.go
internal/metadata/: BUILD.bazel  metadata.go  metadata_test.go
internal/pantri/: BUILD.bazel  pantri.go  pantri_test.go
internal/program/: BUILD.bazel  main.go
internal/stores/: BUILD.bazel  README.md  azure.go  azure_test.go  gcs.go  gcs_test.go  go_plugin.go  options.go  plugin.go  s3.go  s3_test.go  stores.go  stores_test.go
internal/stores/pluginproto/: BUILD.bazel  README.md  plugin.go  plugin.pb.go  plugin.proto  plugin_grpc.pb.go
internal/stores/s3/: BUILD.bazel  s3.go
internal/testutil/: BUILD.bazel
internal/testutils/: BUILD.bazel  memfs.go  memfs_test.go
metadata/: BUILD.bazel  metadata.go  metadata_test.go
objects/: BUILD.bazel  objects.go  objects_test.go
pantri/: BUILD.bazel  pantri.go  pantri_test.go
pantri/loader/: BUILD.bazel  loader.go  loader_test.go
plugin/localstore/: BUILD.bazel  main.go
plugins/localstore/: BUILD.bazel  main.go  main_test.go
program/: BUILD.bazel
stores/: BUILD.bazel  README.md  azure.go  azure_test.go  gcs.go  gcs_test.go  local.go  options.go  plugin.go  plugin_test.go  s3.go  s3_test.go  stores.go  stores_test.go
stores/initialize/: initialize.go
stores/local/: BUILD.bazel  local.go
stores/pluginproto/: BUILD.bazel  README.md  plugin.pb.go  plugin.proto
stores/s3/: BUILD.bazel  s3.go
testutils/: BUILD.bazel  filepath.go  memfs.go  memfs_test.go
tools/: go_proto_library_source.bzl  gopackagesdriver.sh
