load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bindetector",
    srcs = [
        "bindetector.go",
        "bindetector_unix.go",
        "bindetector_windows.go",
    ],
    importpath = "github.com/discentem/cavorite/bindetector",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_google_logger//:logger"],
)

go_test(
    name = "bindetector_test",
    srcs = ["bindetector_unix_test.go"],
    embed = [":bindetector"],
    deps = ["@com_github_stretchr_testify//require"],
)
