load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = [
        "config.go",
        "load.go",
    ],
    importpath = "github.com/discentem/cavorite/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//stores",
        "@com_github_google_logger//:logger",
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "config_test",
    srcs = [
        "config_test.go",
        "load_test.go",
    ],
    embed = [":config"],
    deps = [
        "//stores",
        "//testutils",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
