load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "exec",
    srcs = ["exec.go"],
    importpath = "github.com/discentem/cavorite/exec",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "exec_test",
    srcs = ["exec_test.go"],
    embed = [":exec"],
    data = ["test/artifacts/long_running.sh"], # make the script available to bazel
    deps = ["@com_github_stretchr_testify//assert"],
)
