load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "objects",
    srcs = ["objects.go"],
    importpath = "github.com/discentem/cavorite/objects",
    visibility = ["//visibility:public"],
)

go_test(
    name = "objects_test",
    srcs = ["objects_test.go"],
    embed = [":objects"],
    deps = ["@com_github_stretchr_testify//assert"],
)
