load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "pantri",
    srcs = ["pantri.go"],
    importpath = "github.com/example/project/pantri",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_logger//:go_default_library",
        "@com_github_mitchellh_go_homedir//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
    ],
)

go_test(
    name = "pantri_test",
    srcs = ["pantri_test.go"],
    embed = [":pantri"],
    deps = [
        "@com_github_spf13_afero//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
