load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "testutils",
    srcs = [
        "filepath.go",
        "memfs.go",
    ],
    importpath = "github.com/discentem/cavorite/testutils",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_spf13_afero//:afero"],
)

go_test(
    name = "testutils_test",
    srcs = ["memfs_test.go"],
    embed = [":testutils"],
    deps = [
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
