load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cli",
    srcs = [
        "helpers.go",
        "init.go",
        "loader.go",
        "retrieve.go",
        "root.go",
        "upload.go",
    ],
    importpath = "github.com/discentem/pantri_but_go/internal/cli",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/metadata",
        "//internal/stores",
        "@com_github_google_logger//:logger",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "cli_test",
    srcs = [
        "helpers_test.go",
        "init_test.go",
        "loader_test.go",
        "retrieve_test.go",
        "root_test.go",
        "upload_test.go",
    ],
    embed = [":cli"],
    deps = [
        "//internal/config",
        "//internal/metadata",
        "//internal/stores",
        "//internal/testutil",
        "@com_github_gonuts_go_shellquote//:go_default_library",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
