load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cli",
    srcs = [
        "helpers.go",
        "init.go",
        "retrieve.go",
        "root.go",
        "upload.go",
    ],
    importpath = "github.com/discentem/cavorite/internal/cli",
    visibility = ["//:__subpackages__"],
    deps = [
        "//config",
        "//metadata",
        "//program",
        "//stores",
        "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//:azblob",
        "@com_github_google_logger//:logger",
        "@com_github_hashicorp_go_multierror//:go-multierror",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "cli_test",
    srcs = [
        "helpers_test.go",
        "init_test.go",
        "retrieve_test.go",
        "root_test.go",
        "upload_test.go",
    ],
    embed = [":cli"],
    deps = [
        "//config",
        "//metadata",
        "//stores",
        "//testutils",
        "@com_github_gonuts_go_shellquote//:go-shellquote",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
