load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/discentem/pantri_but_go/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/stores",
        "@com_github_google_logger//:logger",
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_spf13_afero//:afero",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
    deps = [
        "//internal/stores",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
    ],
)
