load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stores",
    srcs = [
        "gcs.go",
        "options.go",
        "s3.go",
        "stores.go",
    ],
    importpath = "github.com/discentem/pantri_but_go/internal/stores",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/metadata",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_feature_s3_manager//:manager",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_google_logger//:logger",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_viper//:viper",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_api//option",
    ],
)
