load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "stores",
    srcs = [
        "azure.go",
        "gcs.go",
        "options.go",
        "plugin.go",
        "s3.go",
        "stores.go",
    ],
    importpath = "github.com/discentem/cavorite/internal/stores",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/metadata",
        "//internal/stores/pluginproto:pluginproto_go_proto",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_feature_s3_manager//:manager",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_azure_azure_sdk_for_go_sdk_azidentity//:azidentity",
        "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//:azblob",
        "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
        "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blockblob",
        "@com_github_google_logger//:logger",
        "@com_github_hashicorp_go_hclog//:go-hclog",
        "@com_github_hashicorp_go_multierror//:go-multierror",
        "@com_github_hashicorp_go_plugin//:go-plugin",
        "@com_github_spf13_afero//:afero",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_api//option",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)

go_test(
    name = "stores_test",
    srcs = [
        "azure_test.go",
        "gcs_test.go",
        "s3_test.go",
        "stores_test.go",
    ],
    embed = [":stores"],
    deps = [
        "//internal/testutils",
        "@com_github_aws_aws_sdk_go_v2_feature_s3_manager//:manager",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//:azblob",
        "@com_github_azure_azure_sdk_for_go_sdk_storage_azblob//blob",
        "@com_github_fsouza_fake_gcs_server//fakestorage",
        "@com_github_spf13_afero//:afero",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_api//option",
    ],
)
