load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutils",
    srcs = [
        "filepath.go",
        "memfs.go",
    ],
    importpath = "github.com/discentem/cavorite/internal/testutils",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_spf13_afero//:afero"],
)
