load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "s3",
    srcs = ["s3.go"],
    importpath = "github.com/example/project/stores/s3",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_aws_aws_sdk_go_v2//aws:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_config//:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_feature_s3_manager//:go_default_library",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:go_default_library",
        "@com_github_google_logger//:go_default_library",
        "@com_github_mitchellh_mapstructure//:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
    ],
)
