load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "s3",
    srcs = ["s3.go"],
    importpath = "github.com/discentem/pantri_but_go/stores/s3",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/metadata",
        "//pantri",
        "//stores",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_feature_s3_manager//:manager",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_google_logger//:logger",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_spf13_afero//:afero",
    ],
)
