load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "pantri",
    srcs = [
        "init.go",
        "pantri.go",
        "retrieve.go",
        "upload.go",
    ],
    importpath = "github.com/discentem/pantri_but_go/internal/cmd/pantri",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//internal/stores",
        "@com_github_google_logger//:logger",
        "@com_github_spf13_afero//:afero",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_golang_x_exp//slices",
    ],
)
