load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:tools/go_proto_library_source.bzl", "write_go_proto_srcs")

# gazelle:resolve proto proto google/rpc/status.proto @googleapis//google/rpc:status_proto
# gazelle:resolve proto go google/rpc/status.proto  @org_golang_google_genproto//googleapis/rpc/status
# gazelle:resolve proto google/longrunning/operations.proto @googleapis//google/longrunning:operations_proto
# gazelle:resolve proto go google/longrunning/operations.proto @org_golang_google_genproto//googleapis/longrunning
proto_library(
    name = "plugin_proto",
    srcs = ["plugin.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "pluginproto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/discentem/cavorite/internal/stores/pluginproto",
    proto = ":plugin_proto",
    visibility = ["//:__subpackages__"],
)

# needed for golangci-lint to pass outside of bazel
write_go_proto_srcs(
    name = "write_generated_protos",
    src = "plugin.pb.go",
    go_proto_library = ":pluginproto_go_proto",
)
